eks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-base-ingress
  annotations:  # 보안 그룹 등 AWS에 대한 설정들
    # 보안 그룹 설정
    alb.ingress.kubernetes.io/security-groups: sg-0bedfef348e915937 # , id, ...
    # internet-facing: 외부 로드밸런서(IP 부여), internet: 내부
    alb.ingress.kubernetes.io/scheme: internet-facing
    # ip: (Pod의 IP로 트래픽 전달)
    alb.ingress.kubernetes.io/target-type: ip # instance: EC2 인스턴스를 대상으로 하는 타겟 그룹 생성
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    # HTTPS 인증서 정의
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ca-central-1:925047940866:certificate/3352eb5f-ad9a-440d-b66e-0e3528d6a2f6
    # HTTP 접속시 HTTPS로 리다이렉션(선택사항, 권장)
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # 경로 재설정
    # Nginx Ingress Controller 사용시: nginx.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/transforms.nginx-service: >
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              {
                "regex": "^\\/nginx(?:\\/(.*))?$",
                "replace": "/$1"
              }
            ]
          }
        }
      ]
spec:
  ingressClassName: alb
  rules:
  - host: "www.kms26.cloud"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
